--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         Monte Águila
         <i class="icon-whatsapp"></i>
       </a>
+
+      <a href="https://api.whatsapp.com/send?phone=56979861305&text=Hola!%20Vengo%20desde%20la%20página%20web%20y%20deseo%20ordenar%20lo%20siguiente:" class="btn-wsp-four" target="_blank">
+        Yungay
+        <i class="icon-whatsapp"></i>
+      </a>
+  
   
 
 
@@ -1009,10 +1015,13 @@
               <address>Membrillar 238, Frente a la plaza</address>
 
               <a href="https://api.whatsapp.com/send?phone=56971619104&text=Hola!%20Vengo%20desde%20la%20página%20web%20y%20deseo%20ordenar%20lo%20siguiente:" class="light-blue regular alt-p">+569 71619104 - <span class="contacts-sp">Yumbel</span></a>
-              <address>O'Higgins 1070</address>
+              <address>Urizar 509</address>
 
               <a href="https://api.whatsapp.com/send?phone=56949403434&text=Hola!%20Vengo%20desde%20la%20página%20web%20y%20deseo%20ordenar%20lo%20siguiente:" class="light-blue regular alt-p">+569 49403434 - <span class="contacts-sp">Monte Águila</span></a>
               <address>Centro comercial Gasolinera</address>
+
+              <a href="https://api.whatsapp.com/send?phone=56979861305&text=Hola!%20Vengo%20desde%20la%20página%20web%20y%20deseo%20ordenar%20lo%20siguiente:" class="light-blue regular alt-p">+569 49403434 - <span class="contacts-sp">Yungay</span></a>
+              <address>Huamachuco 233</address>
             </div>
           </div>
           <div class="media-2">
